# VIBE-SERCH

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  ruff.toml  vercel.json
ai-clone/: INDEX.md  role.md
ai-clone/feedback/: _TEMPLATE.md
ai-clone/identity/: values.md
ai-clone/principles/: product.md
ai-clone/voice/: tone.md
api/: index.py
plans/: 2026-05-27_mvp-implementation.md  2026-05-27_verified-strategic-foundation.md  2026-05-28_vercel-deploy.md  orchestrator-prompt.md
retrospectives/: 2026-05-27_mvp-implementation.md
src/: config.py  llm.py  main.py  models.py  pipeline.py  scanner.py  scheduler.py  storage.py  telegram.py  web.py
src/templates/: index.html
tests/: test_config.py  test_llm.py  test_main.py  test_models.py  test_pipeline.py  test_scanner.py  test_telegram.py
